WIP dual-role coordinator interface selection
